--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node Build and Deploy
+name: Build and Deploy
 
 on:
   push:
@@ -11,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -24,11 +22,14 @@ jobs:
     - run: npm run build
     - run: npm test --if-present
     - name: Upload GitHub Pages artifact
+      if: github.event_name != 'pull_request'
       uses: actions/upload-pages-artifact@v3.0.1
       with:
         path: dist/
 
   deploy: 
+    if: github.event_name != 'pull_request'
+    name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     needs: build
     permissions:
