--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build --base=/quote-editor/",
+    "buildatroot": "tsc -b && vite build --base=/",
     "lint": "eslint .",
     "preview": "vite preview"
   },
